Write audit logs into log-files instead to syslog
- Change director property 'director.log_access_events_to_syslog' to 'director.log_access_events'
- Throw an error if 'director.log_access_events_to_syslog' is still used
- Introduce new audit log files in '/var/vcap/sys/log/director/'
- Introduce director audit log file 'audit.log'
- Introduce worker audit log files 'audit_worker_x.log'

[#159191961](https://www.pivotaltracker.com/story/show/159191961)

Co-authored-by: Mario Manno <mario.manno@suse.com>
Co-authored-by: Manuel Dewald <m.dewald@sap.com>
Co-authored-by: David Ansari <david.ansari@sap.com>
Co-authored-by: Kai Hofstetter <kai.hofstetter@sap.com>
Co-authored-by: Sebastian Heid <sebastian.heid@sap.com>
Co-authored-by: Denis Langer <denis.langer@sap.com>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -175,6 +175,8 @@ remove_dev_tools: <%= remove_dev_tools %>
 
 record_events: true
 
+log_access_events: true
+
 director_ips: <%= director_ips %>
 
 nats:
@@ -189,3 +191,5 @@ agent:
   env:
     bosh:
       dummy_agent_key_merged: "This key must be sent to agent"
+
+audit_log_path: <%= audit_log_path %>
