--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -30,7 +30,7 @@ params = {
   'enable_cpi_resize_disk' => p('director.enable_cpi_resize_disk'),
   'generate_vm_passwords' => p('director.generate_vm_passwords'),
   'remove_dev_tools' => p('director.remove_dev_tools'),
-  'log_access_events_to_syslog' => p('director.log_access_events_to_syslog'),
+  'log_access_events' => p('director.log_access_events'),
   'flush_arp' => p('director.flush_arp'),
   'networks' => {
       'enable_cpi_management' => p('director.networks.enable_cpi_management'),
@@ -41,6 +41,7 @@ params = {
       'use_dns_addresses' => p('director.local_dns.use_dns_addresses'),
   },
   'cpi_api_test_max_version' => p('director.cpi_api_test_max_version'),
+  'audit_log_path' => '/var/vcap/sys/log/director',
 }
 
 director_db = {
