Set ruby stack size env variables in worker_ctl
This change updates `RUBY_THREAD_MACHINE_STACK_SIZE` and
`RUBY_THREAD_VM_STACK_SIZE` to 16 MB. This allows the bosh workers to
allocate a large number of static ips (250+). Previously, when these
were unset, the workers would error for `stack level too deep`.

[#159494222](https://www.pivotaltracker.com/story/show/159494222)

Co-authored-by: Belinda Liu <bliu@pivotal.io>

--- a/jobs/director/templates/worker_ctl.erb
+++ b/jobs/director/templates/worker_ctl.erb
@@ -31,6 +31,9 @@ if [ $INDEX -eq 1 ]; then
 fi
 <% end %>
 
+export RUBY_THREAD_VM_STACK_SIZE=16777216
+export RUBY_THREAD_MACHINE_STACK_SIZE=16777216
+
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 source $DIR/ps_utils.sh
 
