--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -126,6 +126,12 @@ params['scheduled_jobs'] << {
 }
 
 params['scheduled_jobs'] << {
+  'command' => 'ScheduledOrphanedNetworkCleanup',
+  'schedule' => p('director.networks.cleanup_schedule'),
+  'params' => [{'max_orphaned_age_in_days' => p('director.networks.max_orphaned_age_in_days')}]
+}
+
+params['scheduled_jobs'] << {
   'command' => 'ScheduledDnsBlobsCleanup',
   'schedule' => '0,30 * * * * * UTC',
   'params' => [{'max_blob_age' => 3600, 'num_dns_blobs_to_keep' => 10}]
