Check for nil cloud_properies when matching instance plan
[#160099666](https://www.pivotaltracker.com/story/show/160099666)

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -192,3 +192,4 @@ agent:
       dummy_agent_key_merged: "This key must be sent to agent"
 
 audit_log_path: <%= audit_log_path %>
+keep_unreachable_vms: <%= keep_unreachable_vms %>
