--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -193,3 +193,4 @@ agent:
       dummy_agent_key_merged: "This key must be sent to agent"
 
 audit_log_path: <%= audit_log_path %>
+keep_unreachable_vms: <%= keep_unreachable_vms %>
