Check for nil cloud_properies when matching instance plan
[#160099666](https://www.pivotaltracker.com/story/show/160099666)

Co-authored-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -184,3 +184,5 @@ agent:
   env:
     bosh:
       dummy_agent_key_merged: "This key must be sent to agent"
+
+keep_unreachable_vms: <%= keep_unreachable_vms %>
