Cleanup DNS blobs every 30 minutes
Previously blobs were cleaned up every 30 seconds because of a mistake
in the cron syntax.

[#159152631](https://www.pivotaltracker.com/story/show/159152631)

Co-authored-by: Belinda Liu <bliu@pivotal.io>

--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -133,7 +133,7 @@ params['scheduled_jobs'] << {
 
 params['scheduled_jobs'] << {
   'command' => 'ScheduledDnsBlobsCleanup',
-  'schedule' => '0,30 * * * * * UTC',
+  'schedule' => '0 0,30 * * * * UTC', #every 30 min
   'params' => [{'max_blob_age' => 3600, 'num_dns_blobs_to_keep' => 10}]
 }
 
