Support IPv6 localhost for nginx /stats endpoint
[#160850781](https://www.pivotaltracker.com/story/show/160850781)

Co-authored-by: Vladimir Videlov <vladimir.videlov@sap.com>

--- a/jobs/director/templates/nginx.conf.erb
+++ b/jobs/director/templates/nginx.conf.erb
@@ -98,6 +98,7 @@ http {
         stub_status;
         access_log off;
         allow 127.0.0.1;
+        allow ::1;
         deny all;
       }
       <% end %>
