Revert "Fix typo in director config."
This reverts commit 8e1e638fab98032576a15689a1d600333ba60af4.

Signed-off-by: Miguel Verissimo <mverissimo@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -134,7 +134,7 @@ enable_cpi_resize_disk: <%= enable_cpi_resize_disk %>
 default_update_vm_strategy: <%= default_update_vm_strategy %>
 cpi:
   max_supported_api_version: 2
-  preferred_api_version: <%= preferred_cpi_api_version %>
+  preferred_api_version: <%= preferred_api_version %>
 
 <% if config_server_enabled %>
 config_server:
