--- a/jobs/director/templates/worker_ctl.erb
+++ b/jobs/director/templates/worker_ctl.erb
@@ -8,6 +8,7 @@ PIDFILE=$RUN_DIR/worker_$INDEX.pid
 RUNAS=vcap
 
 # Postgres
+PATH=/var/vcap/packages/postgres-10/bin:$PATH
 PATH=/var/vcap/packages/postgres-9.4/bin:$PATH
 LD_LIBRARY_PATH=/var/vcap/packages/libpq/lib:$LD_LIBRARY_PATH
 
