Enable nats monitoring endpoint on localhost
The default for the monitoring endpoint is 127.0.0.1:8080. This value
can be overwritten in the bosh manifest by setting a value in
`nats.monitoring_endpoint`

[#162268374](https://www.pivotaltracker.com/story/show/162268374)

Co-authored-by: Sebasrtian Heid <sebastian.heid@sap.com>

--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -1,6 +1,8 @@
 net: <%= p("nats.listen_address") %>
 port: <%= p("nats.port") %>
 
+http: <%= p("nats.monitoring_endpoint") %>
+
 logtime: true
 
 log_file: /var/vcap/sys/log/nats/nats.log
