--- a/jobs/director/templates/bbr_restore.erb
+++ b/jobs/director/templates/bbr_restore.erb
@@ -2,6 +2,7 @@
 
 set -e
 
+<% if p('director.db.host').include? "127.0.0.1" %>
 source /var/vcap/packages/ruby-2.4-r4/bosh/runtime.env
 PATH=$PATH:/var/vcap/jobs/director/bin
 
@@ -23,3 +24,4 @@ export GEM_HOME=/var/vcap/packages/director/gem_home/ruby/2.4.0
 
 # BBR does not clean out the backup directory
 rm -rf $ARTIFACT_DIRECTORY/*
+<% end %>
