Add ability to supply link address in template test

--- a/src/bosh-template/spec/assets/template-test-release/jobs/web-server/templates/config.erb
+++ b/src/bosh-template/spec/assets/template-test-release/jobs/web-server/templates/config.erb
@@ -24,6 +24,7 @@
         'host' => db_link.instances.first.address,
         'port' => db_link.p('port'),
         'database' => db_link.p('name'),
+        'address' => db_link.address,
     }
   end
 
