--- a/jobs/postgres-10/templates/pre-start.erb
+++ b/jobs/postgres-10/templates/pre-start.erb
@@ -43,12 +43,37 @@ fi
 
 if [[ -f /var/vcap/store/postgres-10/fresh ]] ; then
   if [[ -d /var/vcap/store/postgres-9.4 ]] ; then
-    echo "Copying contents of postgres-9.4 to postgres-10 for postgres upgrade"
+    echo "checking status of postgres-9.4..."
+    if ! ${PACKAGE_DIR_OLD}/bin/pg_controldata "${DATA_DIR_OLD}" | grep -E "Database cluster state:\s+shut down"; then
+      echo "postgres-9.4 did not shut down cleanly"
+      echo "repairing postgres-9.4. cluster state..."
+
+      su - vcap -c "$PACKAGE_DIR_OLD/bin/postgres -D $DATA_DIR_OLD" &
+      postgres_pid=$!
+
+      count=0
+      while ! ${PACKAGE_DIR_OLD}/bin/pg_isready -t 30 -U postgres; do
+        echo "waiting for postgres-9.4 to start..."
+        sleep 1
+        count=$(( count + 1 ))
+        if [ $count -gte 120 ]; then
+          echo "timed out waiting for postgres-9.4 to start"
+          exit 1
+        fi
+      done
+
+      kill "${postgres_pid}"
+      wait "${postgres_pid}"
+    fi
+
+    echo "copying contents of postgres-9.4 to postgres-10 for postgres upgrade..."
     su - vcap -c "/var/vcap/packages/postgres-10/bin/pg_upgrade \
       --old-bindir=$PACKAGE_DIR_OLD/bin \
       --new-bindir=$PACKAGE_DIR/bin \
       --old-datadir=$DATA_DIR_OLD \
       --new-datadir=$DATA_DIR"
+
+    echo "successfully upgraded from postgres-9.4"
   fi
 
   rm /var/vcap/store/postgres-10/fresh
