Fix integration test and rename job property
[#164262516](https://www.pivotaltracker.com/story/show/164262516)

Co-authored-by: Behrouz Soroushian <bsoroushian@pivotal.io>

--- a/src/spec/assets/test_release_template/jobs/bazquux/templates/drain.erb
+++ b/src/spec/assets/test_release_template/jobs/bazquux/templates/drain.erb
@@ -14,7 +14,7 @@ case $DRAIN_TYPE in
   static)
     (
       echo "$@"
-      echo <%= p('test_property') %>
+      echo <%= p('fail_on_pre_stop') %>
     ) > $DRAIN_OUTPUT
 
     echo 0
