Introduce flag to enable parallel resurrection
[#164736224](https://www.pivotaltracker.com/story/show/164736224)

Co-authored-by: Manuel Dewald <m.dewald@sap.com>
Co-authored-by: David Ansari <david.ansari@sap.com>
Co-authored-by: Denis Langer <denis.langer@sap.com>

--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -41,6 +41,7 @@ params = {
       'use_dns_addresses' => p('director.local_dns.use_dns_addresses'),
   },
   'audit_log_path' => '/var/vcap/sys/log/director',
+  'parallel_problem_resolution' => p('director.parallel_problem_resolution', true)
 }
 
 director_db = {
