Fix nats config template
[#163833400](https://www.pivotaltracker.com/story/show/163833400)

Co-Authored-By Charles Hansen <chansen@pivotal.io>

--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -7,7 +7,7 @@ logtime: true
 
 log_file: /var/vcap/sys/log/nats/nats.log
 
-authorization
+authorization {
   DIRECTOR_PERMISSIONS: {
     publish: [
       "agent.*",
