Allow operators to configure the nats max_payload
[finishes #164789263](https://www.pivotaltracker.com/story/show/164789263)

--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -56,3 +56,4 @@ tls {
 
 ping_interval: <%= p('nats.ping_interval') %>
 ping_max: <%= p('nats.ping_max_outstanding') %>
+max_payload: <%= p('nats.max_payload') %>
