--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -58,3 +58,4 @@ tls {
 
 ping_interval: <%= p('nats.ping_interval') %>
 ping_max: <%= p('nats.ping_max_outstanding') %>
+max_payload: <%= p('nats.max_payload') %>
