Convert nats.max_payload to nats.max_payload_mb
[#165387740](https://www.pivotaltracker.com/story/show/165387740)

--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -56,4 +56,4 @@ tls {
 
 ping_interval: <%= p('nats.ping_interval') %>
 ping_max: <%= p('nats.ping_max_outstanding') %>
-max_payload: <%= p('nats.max_payload') %>
+max_payload: <%= (1048576 * p('nats.max_payload_mb').to_f).to_i %>
