Set small vm_start_timeout for resurrector integration tests
[#167502252] (https://www.pivotaltracker.com/story/show/167502252)

Co-authored-by: Maya Rosecrance <mrosecrance@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/health_monitor_without_resurrector.yml.erb
+++ b/src/bosh-dev/assets/sandbox/health_monitor_without_resurrector.yml.erb
@@ -20,6 +20,7 @@ intervals:
   analyze_agents: 10
   agent_timeout: 10
   rogue_agent_alert: 20
+  vm_start_timeout: 5
 
 plugins:
   - name: logger
