Use ipv4 loopback address instead of domain
To potentially avoid issues during CI runs. This is a guess for what the
issue is. Specifically on GCP infrastructure, we are seeing 502 errors
from nginx for the director since we've switched to using localhost in
preparation for ipv6.

--- a/jobs/director/templates/nginx.conf.erb
+++ b/jobs/director/templates/nginx.conf.erb
@@ -37,7 +37,7 @@ http {
   client_max_body_size <%= p('director.max_upload_size') %>;
 
   upstream director {
-    server localhost:<%= p('director.backend_port') %>;
+    server 127.0.0.1:<%= p('director.backend_port') %>;
   }
 
   server {
