Add pre-signature ability to local blobstore
This change adds a (temporary) /signed/ endpoint to the blobstore, that
in conjunction with v0.39 of dav-cli allows for pre-signed urls to be
used to access blobs.

[#167978684](https://www.pivotaltracker.com/story/show/167978684)

Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/jobs/blobstore/templates/blobstore.conf.erb
+++ b/jobs/blobstore/templates/blobstore.conf.erb
@@ -33,6 +33,30 @@ server {
     }
   }
 
+  location ~* ^/signed/(?<object_id>.+)$ {
+    if ( $request_method !~ ^(GET|PUT)$ ) {
+      return 405;
+    }
+
+    # Variable to be passed are secure token, timestamp, expiration date
+    secure_link_hmac $arg_st,$arg_ts,$arg_e;
+
+    # Secret key
+    secure_link_hmac_secret hmac_secret;
+
+    # Message to be verified
+    secure_link_hmac_message $request_method$object_id$arg_ts$arg_e;
+
+    # Cryptographic hash function to be used
+    secure_link_hmac_algorithm sha256;
+
+    if ($secure_link_hmac != "1") {
+      return 404;
+    }
+
+    rewrite ^/signed/(.*)$ /$object_id;
+  }
+
   <% if p('blobstore.nginx.enable_metrics_endpoint') %>
   location /stats {
     # Config for basic metrics module: ngx_http_stub_status_module
