--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -236,6 +236,7 @@ else
     'endpoint' => "https://#{p('blobstore.address')}:#{p('blobstore.port')}",
     'user' => p('blobstore.director.user'),
     'password' => p('blobstore.director.password'),
+    'secret' => p('blobstore.secret'),
     'tls' => {
         'cert' => {
             'ca' => p('blobstore.tls.cert.ca')
