--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -78,6 +78,7 @@ blobstore: &director_blobstore
   provider: local
   options:
     blobstore_path: <%= blobstore_storage_dir %>
+    secret: 56aa5b1144e2ac784b30f156d24a873c
 
 backup_destination:
   provider: local
