Fix signed url handing for dav blobstore
Template blobstore secret directly into blobstore.conf
Bump davcli blob to create valid urls
Fix redirects from authenticated to internal endpoint

[#167978684] (https://www.pivotaltracker.com/story/show/167978684)

--- a/jobs/blobstore/templates/blobstore.conf.erb
+++ b/jobs/blobstore/templates/blobstore.conf.erb
@@ -18,7 +18,7 @@ server {
   ssl_certificate /var/vcap/jobs/blobstore/config/server_tls_cert.pem;
   ssl_certificate_key /var/vcap/jobs/blobstore/config/server_tls_private_key.pem;
 
-  location / {
+  location ~* ^/(?<object_id>[a-fA-F0-9][a-fA-F0-9]\/.+) {
     root /var/vcap/store/blobstore/store/;
 
     dav_methods DELETE PUT;
@@ -33,8 +33,16 @@ server {
     }
   }
 
+  location /internal {
+    internal;
+    alias /var/vcap/store/blobstore/store/;
+
+    dav_methods DELETE PUT;
+    create_full_put_path on;
+  }
+
   location ~* ^/signed/(?<object_id>.+)$ {
-    if ( $request_method !~ ^(GET|PUT)$ ) {
+    if ( $request_method !~ ^(GET|PUT|HEAD)$ ) {
       return 405;
     }
 
@@ -42,7 +50,7 @@ server {
     secure_link_hmac $arg_st,$arg_ts,$arg_e;
 
     # Secret key
-    secure_link_hmac_secret hmac_secret;
+    secure_link_hmac_secret <%= p('blobstore.secret') %>;
 
     # Message to be verified
     secure_link_hmac_message $request_method$object_id$arg_ts$arg_e;
@@ -51,10 +59,10 @@ server {
     secure_link_hmac_algorithm sha256;
 
     if ($secure_link_hmac != "1") {
-      return 404;
+      return 403;
     }
 
-    rewrite ^/signed/(.*)$ /$object_id;
+    rewrite ^/signed/(.*)$ /internal/$object_id;
   }
 
   <% if p('blobstore.nginx.enable_metrics_endpoint') %>
