Use localhost in sandbox connection strings
Ruby cert validation doesn't accept IP common names
if the expected server name isn't specified in code.

Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -7,7 +7,7 @@ runtime:
 
 port: <%= director_ruby_port %>
 
-mbus: nats://127.0.0.1:<%= nats_port %>
+mbus: nats://localhost:<%= nats_port %>
 
 logging:
   level: DEBUG
@@ -27,7 +27,7 @@ db: &bosh_db
   database: <%= database.db_name %>
   # Settings are set to defaults since DbBackup
   # currently does not support export without them
-  host: 127.0.0.1
+  host: localhost
   port: <%= database.port %>
   user: <%= database.username %>
   password: <%= database.password %>
