--- a/src/bosh-dev/assets/sandbox/nats.conf.erb
+++ b/src/bosh-dev/assets/sandbox/nats.conf.erb
@@ -1,6 +1,6 @@
 # NATS Configuration file
 
-listen: 127.0.0.1:<%= nats_port %> # host/port to listen for client connections
+listen: localhost:<%= nats_port %> # host/port to listen for client connections
 
 log_file: "<%= nats_log_path %>"
 
