--- a/src/bosh-dev/assets/sandbox/health_monitor.yml.erb
+++ b/src/bosh-dev/assets/sandbox/health_monitor.yml.erb
@@ -3,7 +3,7 @@ http:
   port: <%= hm_port %>
 
 mbus:
-  endpoint: nats://127.0.0.1:<%= nats_port %>
+  endpoint: nats://localhost:<%= nats_port %>
   server_ca_path: <%= nats_certificate_paths['ca_path'] %>
   client_private_key_path: <%= nats_certificate_paths['clients']['health_monitor']['private_key_path'] %>
   client_certificate_path: <%= nats_certificate_paths['clients']['health_monitor']['certificate_path'] %>
