--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -27,7 +27,7 @@ db: &bosh_db
   database: <%= database.db_name %>
   # Settings are set to defaults since DbBackup
   # currently does not support export without them
-  host: 127.0.0.1
+  host: <%= database.host %>
   port: <%= database.port %>
   user: <%= database.username %>
   password: <%= database.password %>
